btn fix on mobile version fz

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -25,11 +25,10 @@
     &--sm {
         @media screen and (min-width: 992px) {
             padding: .8rem 1.8rem;
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             font-weight: 500;
             border-radius: 1.8rem;
         }
-
     }
 }
 
